--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -1,10 +1,10 @@
 <html>
 <body>
 
-{{#people}}
+{{#offList}}
 <a href="/?idNum={{id}}"> {{firstName}} &nbsp; {{lastName}} </a><br>
-{{/people}}
-<a href="" class="floatleft" title="Previous" onclick="prev(); return false"></a>
-<a href="" class="floatright" title="Next" onclick="next(); return false"></a>
+{{/offList}}
+<a href="/?offList={{id}}">Previous</a>
+<a href="/?offList={{id}}">Next</a>
 </body>
 </html>
