Cleaning up offlist and adding page

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 
-{{#offList}}
+{{#offSet}}
 <a href="/?idNum={{id}}"> {{firstName}} &nbsp; {{lastName}} </a><br>
-{{/offList}}
+{{/offSet}}
 <a href="/?offList={{id}}">Previous</a>
 <a href="/?offList={{id}}">Next</a>
 </body>
